# datadouble

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: profile-format.md
examples/: README.md  orders.csv  twin_demo.py
scripts/: smoke.sh
src/datadouble/: __init__.py  __main__.py  cli.py  compare.py  csvio.py  errors.py  generate.py  inference.py  profile.py  rng.py  stats.py
tests/: conftest.py  test_cli.py  test_compare.py  test_csvio.py  test_generate.py  test_inference.py  test_profile.py  test_readme.py  test_rng.py  test_stats.py
